@@ -12,81 +12,6 @@
 
 static const char* MFILE = "SPVM/IO/File.c";
 
-int32_t SPNATIVE__SPVM__IO__File__gets_chomp(SPVM_ENV* env, SPVM_VALUE* stack) {
-  // Self
-  void* obj_self = stack[0].oval;
-  if (!obj_self) { SPVM_DIE("Self must be defined", MFILE, __LINE__); }
-  
-  // File fh
-  void* obj_fh;
-  SPVM_OFIELD(env, obj_fh, obj_self, "SPVM::IO::File", "fh", "SPVM::FileHandle", MFILE, __LINE__);
-  void* fh = (FILE*)env->pointer(env, obj_fh);
-
-  if (fh == NULL) {
-    stack[0].oval = NULL;
-    return SPVM_SUCCESS;
-  }
-  
-  int32_t scope_id = env->enter_scope(env);
-  
-  int32_t capacity = 80;
-  void* obj_buffer = env->new_barray(env, capacity);
-  int8_t* buffer = env->belems(env, obj_buffer);
-  
-  int32_t pos = 0;
-  int32_t end_is_eof = 0;
-  while (1) {
-    int32_t ch = fgetc(fh);
-    if (ch == EOF) {
-      end_is_eof = 1;
-      break;
-    }
-    else {
-      if (pos >= capacity) {
-        // Extend buffer capacity
-        int32_t new_capacity = capacity * 2;
-        void* new_obj_buffer = env->new_barray(env, new_capacity);
-        int8_t* new_buffer = env->belems(env, new_obj_buffer);
-        memcpy(new_buffer, buffer, capacity);
-
-        int32_t removed = env->remove_mortal(env, scope_id, obj_buffer);
-        assert(removed);
-        
-        capacity = new_capacity;
-        obj_buffer = new_obj_buffer;
-        buffer = new_buffer;
-      }
-      
-      if (ch == '\n') {
-        break;
-      }
-      else {
-        buffer[pos] = ch;
-        pos++;
-      }
-    }
-  }
-  
-  if (pos > 0 || !end_is_eof) {
-    void* oline;
-    if (pos == 0) {
-      oline = env->new_barray(env, 0);
-    }
-    else {
-      oline = env->new_barray(env, pos);
-      int8_t* line = env->belems(env, oline);
-      memcpy(line, buffer, pos);
-    }
-    
-    stack[0].oval = oline;
-  }
-  else {
-    stack[0].oval = NULL;
-  }
-  
-  return SPVM_SUCCESS;
-}
-
 int32_t SPNATIVE__SPVM__IO__File__gets(SPVM_ENV* env, SPVM_VALUE* stack) {
   // Self
   void* obj_self = stack[0].oval;
